<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorh3">
    <!-- TextInputLayout الأول -->

    <!-- TextInputLayout 1 with shadow -->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup">

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="85dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="date"
            android:text="تاريخ التشخيص" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="102dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="-25dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/calendar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/info_personnel"
        android:layout_width="335dp"
        android:layout_height="99dp"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/tajawal_regular"
        android:text="@string/info_midical"
        android:textAlignment="center"
        android:textColorHint="@color/text01"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="201dp"
        android:layout_height="38dp"

        android:layout_marginTop="12dp"
        android:fontFamily="@font/tajawal_bold"
        android:text="@string/info2"
        android:textAlignment="center"
        android:textColorHint="@color/text01"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="125dp"
        android:layout_height="43dp"

        android:fontFamily="@font/tajawal_bold"
        android:text="@string/diab_id"
        android:textAlignment="center"
        android:textColorHint="@color/text01"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_personnel"
        app:strokeWidth="1dp" />


    <!-- RadioGroup -->


    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="242dp"
        android:layout_height="126dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id">

        <RadioButton
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="25dp"
            android:buttonTint="#00000000"
            android:text="" />

        <RadioButton
            android:id="@+id/tow"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="25dp"
            android:buttonTint="#00000000"
            android:text="" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="156dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/information_medical_ico"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/logInbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/text01"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="52dp"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_24" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
